[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uenv"
version = "1.3.3"
description = "A unified CLI wrapper for managing python virtual environments (conda, venv, uv)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "uv"
]

[project.scripts]
uenv = "uenv.cli:main"
